Fixed some navbar sizing issues on smaller screens

--- a/css/master.css
+++ b/css/master.css
@@ -7,7 +7,10 @@
 .nav {
   background: #1f1f1f;
   -webkit-transition: all .5s;
-  transition: all .5s; }
+  transition: all .5s;
+  height: 11vh;
+  max-height: 100px;
+  min-height: 75px; }
   .nav .nav-t {
     background: transparent;
     border-color: whitesmoke; }
@@ -25,6 +28,9 @@
     .nav .nav-c .close > i {
       color: #ff8672; }
 
+@media only screen and (max-width: 436px) {
+  .nav > .nav-t {
+    padding: 2.2%; } }
 @media only screen and (min-width: 768px) {
   .nav {
     background: transparent; }
